Fix FF ColumnSet issue of invisible horiz scrollbars on high DPI
Also added generic .dgrid-scrollbar-width and .dgrid-scrollbar-height
selectors, which can be used in situations where an element needs to
be the width or height of an OS scrollbar.

--- a/css/columnset.css
+++ b/css/columnset.css
@@ -12,7 +12,6 @@
 	bottom: 0px;
 	overflow-x: auto;
 	overflow-y: hidden;
-	height: 18px; /* must be one more than the scroll bar height for IE to listen to clicks, any more blocks clicks in the main area*/
 }
 .dgrid-column-set-scroller-content {
 	position: relative;
