--- a/css/dgrid.css
+++ b/css/dgrid.css
@@ -16,7 +16,6 @@
 	position: absolute;
 	top: 0px;
 	right: 0px;
-	width: 17px;
 }
 
 .dgrid-sortable {
